@@ -1,8 +1,12 @@
 Changes in 0.61.1:
   * Cleaned up error message which results from Conary not being able to
     determine which trove to remove when a new one is installed
-  * Switched dependency object to use slots
-  * Cache hash values for DependencySet, Version, and Branch objects
+  * Dependency object use slots
+  * Hash values for DependencySet, Version, and Branch objects are cached
+  * UIDs and GIDs that cannot be mapped to symbolic names no
+    longer cause the buildpackage code to traceback.  The ownerships
+    from the filesystem were never used anyway, so it's safe to assume
+    that all files are owned by root:root
 
 Changes in 0.61.0:
   * New functionality for maintaining user groups: renaming and updating
